[package]
name = "axvuart"
version = "0.1.0"
edition = "2024"
description = "Virtual PL011 UART device implementation for AxVisor hypervisor."

[features]
default = []

[dependencies]
# Workspace dependencies
axaddrspace = { workspace = true }
axdevice_base = { workspace = true }
axvmconfig = { workspace = true }

# External dependencies
axerrno = "0.1.0"
bitflags = { workspace = true }
log = { workspace = true }
memory_addr = "0.4"
spin = { workspace = true }

