[package]
name = "axvuart"
version = "0.1.0"
edition = "2024"
description = "Virtual PL011 UART device implementation for AxVisor hypervisor."

[features]
default = []

[dependencies]
axaddrspace = "0.1"
axdevice_base = "0.1"
axvmconfig = { version = "0.1", default-features = false }

axerrno = "0.1.0"
bitflags = "2.2"
log = "0.4"
memory_addr = "0.4"
spin = "0.9"
